--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,29 @@ html {
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block; }
 
+/* Customizing the scroll bar */
+/* Custom scrollbars are not supported in Firefox or IE/Edge. */
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  /* border-radius: 5px; */
+  background: #3459eb;
+} 
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #1a4eb8;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
