--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,21 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   background: #1a4eb8;
 }
 
+#back-to-top {
+  display: none;
+  position: fixed;
+  border-radius: 60px;
+  background-color: #f1f1f1;
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,.24), 0 1px 1px -1px rgba(0,0,0,.24), 0 1px 5px 0 rgba(0,0,0,.22);
+  bottom: 25px;
+  right: 25px;
+  height: 58px;
+}
+
+#back-to-top:hover {
+  background-color: #d1d1d1;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
