--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,14 @@ body {
 [tabindex="-1"]:focus {
   outline: 0 !important; }
 
+  .btn-default {
+    background-color: #0055ff !important;
+    color: white !important;
+  }
+  .btn-default:hover {
+    background-color: #0022ff !important;
+  }
+
 hr {
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
