--- a/css/style.css
+++ b/css/style.css
@@ -5318,11 +5318,64 @@ a.close.disabled {
   right: 15%;
   bottom: 20px;
   left: 15%;
-  z-index: 10;
+  z-index: 0;
   padding-top: 20px;
   padding-bottom: 20px;
   color: #fff;
   text-align: center; }
+
+  /*---------------------
+  Speakers Section
+  -----------------------*/
+
+.speaker-section {
+	padding-top: 85px;
+}
+
+.speakers-about {
+	margin-bottom: 65px;
+}
+
+.spad {
+	padding-top: 100px;
+	padding-bottom: 100px;
+}
+
+.speakers-about .speaker-img {
+	margin-bottom: 22px;
+}
+
+.speakers-about .speaker-img img {
+	border-radius: 6px;
+  min-width: 100%;
+  height: 370px;
+  width: 200px;
+}
+
+.speakers-about .speaker-text h3 {
+	color: #272727;
+	font-size: 30px;
+	font-weight: 900;
+}
+
+.speakers-about .speaker-text h3 span {
+	font-size: 18px;
+	font-weight: 400;
+	display: block;
+	margin-top: 10px;
+}
+
+.speaker-section.speaker-all {
+  padding-bottom: 10px;
+}
+
+.speaker-section.speaker-all .speakers-about {
+  margin-bottom: 86px;
+}
+
+/*-----------------------------
+Speakers Section End
+------------------------------*/
 
 @-webkit-keyframes spinner-border {
   to {
